Fix font size on mobile menu

--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -20,6 +20,7 @@
     #top-menu {
         height: 100vh;
         width: 100vw;
+        font-size: $font-size-header;
         top: 0;
         left: 0;
         &> div {
@@ -42,8 +43,6 @@
                         display: flex;
                         flex-direction: row;
                         align-items: center;
-                        font-size: 2vh;
-
                         height: 100%;
                     }
                     flex: 1;
